--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -29,7 +29,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li class="about-menu"><a href="#about">About</a></li>
-                    <li class="add-menu"><a href="#logout">Sair</a></li>
+                    <li class="add-menu"><a href="logout">Sair</a></li>
                 </ul>
         </div><!--/.nav-collapse -->
       </div>
