--- a/public/signin.html
+++ b/public/signin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -21,14 +21,18 @@
 
     <div class="container">
 
-      <form class="form-signin">
+      <form class="form-signin" action="/login" method="post">
         <h2 class="form-signin-heading">Clinica USCS</h2>
-        <input type="text" class="form-control" placeholder="Email" required autofocus>
-        <input type="password" class="form-control" placeholder="Senha" required>
+        <input type="text" name="username" class="form-control" placeholder="Email" required autofocus>
+        <input type="password" name="password" class="form-control" placeholder="Senha" required>
         <label class="checkbox">
-          <input type="checkbox" value="remember-me"> Manter-me Conectado
+          <input type="checkbox" name="rememberme" value="1"> Manter-me Conectado
         </label>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+        </br>
+        <div id="alert" class="alert alert-warning" style="display: none; text-align: center">
+            <b>Login ou Senha Inválidos!</b>
+        </div>
       </form>
 
     </div> <!-- /container -->
@@ -39,3 +43,13 @@
     <!-- Placed at the end of the document so the pages load faster -->
   </body>
 </html>
+
+<script type="text/javascript">
+    var query = window.location.search.substring(1);
+    var retorno = query.split("&");
+    if (retorno == 'return=false') {
+        document.getElementById('alert').style.display = '';
+    }
+    else
+        document.getElementById('alert').style.display = 'none';
+</script>
