--- a/public/tpl/StudentView.html
+++ b/public/tpl/StudentView.html
@@ -174,7 +174,7 @@
                         <label for="grapes" class="control-label">Email:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="mail" name="mail" value="<%= mail %>" maxlength="100"/>
+                            <input type="text" class="form-control" id="username" name="username" value="<%= username %>" maxlength="100"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
