incluindo modal de geracao de senha de acesso

--- a/public/tpl/StudentView.html
+++ b/public/tpl/StudentView.html
@@ -174,27 +174,7 @@
                         <label for="grapes" class="control-label">Email:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="username" name="username" value="<%= username %>" maxlength="100"/>
-                            <span class="help-inline"></span>
-                        </div>
-                    </div>
-                    </article>
-                    <article style="float: left; width: 48%">
-                    <div class="control-group">
-                        <label for="grapes" class="control-label">Senha:</label>
-
-                        <div class="controls">
-                            <input type="text" class="form-control" id="password" name="password" value="<%= password %>"/>
-                            <span class="help-inline"></span>
-                        </div>
-                    </div>
-                    </article>
-                    <article style="float: right; width: 49%">
-                    <div class="control-group">
-                        <label for="grapes" class="control-label">Confirmar Senha:</label>
-
-                        <div class="controls">
-                            <input type="text" class="form-control" id="confirmpassword" name="confirmpassword" value="<%= password %>"/>
+                            <input type="text" class="form-control" id="mail" name="mail" value="<%= mail %>" maxlength="100"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
