incluindo nome no header

--- a/public/tpl/StudentsView.html
+++ b/public/tpl/StudentsView.html
@@ -41,6 +41,8 @@
 </div>
 
 <!-- Modal -->
+<form class="form-horizontal span12">
+
     <div id="addAccount" class="modal container hide fade" tabindex="-1">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -85,13 +87,14 @@
     </section>
   </div>
   </fieldset>
-  </br>
+  <br/>
   <div class="modal-footer">
     <button type="button" data-dismiss="modal" class="btn">Cancelar</button>
-    <button type="button" class="btn btn-primary">Gerar Senha de Acesso</button>
+    <button type="button" class="btn btn-primary btn-large save">Gerar Senha de Acesso</button>
   </div>
-  </br>
+  <br/>
 </div>
+</form>
 
 <script>
     function find(por) {
