--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -30,7 +30,17 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="about-menu"><a href="#about">About</a></li>
                     <li class="add-menu"><a href="logout">Sair</a></li>
+                    <li class="about-menu"><a><label id="loggedBy"></label></a></li>
                 </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
+
+<script>
+
+    $.getJSON('/loggedtest', function (data) {
+        if (data)
+            $("#loggedBy").html(data.username);
+    });
+
+</script>
