informando mensagem de erro ao gerar senha

--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -39,8 +39,10 @@
 <script>
 
     $.getJSON('/loggedtest', function (data) {
-        if (data)
+        if (data) {
+            userAccountAccess = data;
             $("#loggedBy").html(data.username);
+        }
     });
 
 </script>
