--- a/public/signin.html
+++ b/public/signin.html
@@ -23,8 +23,8 @@
 
       <form class="form-signin" action="/login" method="post">
         <h2 class="form-signin-heading">Clinica USCS</h2>
-        <input type="text" name="username" class="form-control" placeholder="Email" required autofocus>
-        <input type="password" name="password" class="form-control" placeholder="Senha" required>
+        <input type="text" name="username" class="form-control" placeholder="Email" maxlength="100" required autofocus>
+        <input type="password" name="password" class="form-control" placeholder="Senha" maxlength="20" required>
         <label class="checkbox">
           <input type="checkbox" name="rememberme" value="1"> Manter-me Conectado
         </label>
