--- a/public/tpl/StudentsView.html
+++ b/public/tpl/StudentsView.html
@@ -58,7 +58,7 @@
                         <label for="name" class="control-label">Email:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="username" name="username" maxlength="100" readonly style="float: left"/>
+                            <input type="text" class="form-control" id="username" name="username" readonly style="float: left"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                         <label for="grapes" class="control-label">Senha:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="password" name="password" maxlength="100"/>
+                            <input type="password" class="form-control" id="password" name="password" maxlength="20" autofocus/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                         <label for="grapes" class="control-label">Confirma Senha:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="passwordconfirm" name="passwordconfirm"/>
+                            <input type="password" class="form-control" id="passwordconfirm" name="passwordconfirm" maxlength="20"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -123,6 +123,7 @@
             if (data) {
                 utils.showAlert('Este usuário já possui senha de acesso', '', 'alert-warning');
                 $("#addAccountAlert").show();
+                $(".modal-body #password").focus();
             }
         });
     });
@@ -141,7 +142,7 @@
         var pass = $(".modal-body #password").val();
         var passConfirm = $(".modal-body #passwordconfirm").val();
 
-        return (pass == passConfirm);
+        return (pass != '' && passConfirm != '' && pass == passConfirm);
     }
 
     function addAccess() {
@@ -162,9 +163,8 @@
                 utils.showAlert('Success!', 'Senha gerada com sucesso', 'alert-success');
             },
 
-            error: function (err, message) {
-                utils.showAlert('Erro', 'Erro ao gerar senha de acesso', 'alert-error');
-                alert('ok');
+            error: function (error) {
+                utils.showAlert('Erro', $.parseJSON(error.responseText).error, 'alert-error');
             }
         });
     };
