--- a/public/tpl/StudentsView.html
+++ b/public/tpl/StudentsView.html
@@ -68,7 +68,7 @@
                         <label for="grapes" class="control-label">Senha:</label>
 
                         <div class="controls">
-                            <input type="password" class="form-control" id="password" name="password" maxlength="20" autofocus/>
+                            <input type="password" class="form-control" id="password" name="password" placeholder="Senha" maxlength="20" required autofocus/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                         <label for="grapes" class="control-label">Confirma Senha:</label>
 
                         <div class="controls">
-                            <input type="password" class="form-control" id="passwordconfirm" name="passwordconfirm" maxlength="20"/>
+                            <input type="password" class="form-control" id="passwordconfirm" name="passwordconfirm" placeholder="Senha" maxlength="20"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
