ajustando selecao dos menus

--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -11,26 +11,26 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#panel">Painel de Atendimentos</a></li>
-            <li><a href="#calendar">Agenda</a></li>
-            <li><a href="#patients">Pacientes</a></li>
+            <li class="painel-menu"><a href="#panel">Painel de Atendimentos</a></li>
+            <li class="calendar-menu"><a href="#calendar">Agenda</a></li>
+            <li class="patients-menu"><a href="#patients">Pacientes</a></li>
             <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Usuários <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#students">Alunos</a></li>
-                            <li><a href="#teachers">Professores</a></li>
-                            <li><a href="#attendants">Atendentes</a></li>
+                            <li class="students-menu"><a href="#students">Alunos</a></li>
+                            <li class="teachers-menu"><a href="#teachers">Professores</a></li>
+                            <li class="attendants-menu"><a href="#attendants">Atendentes</a></li>
 
                            <li class="divider"></li>
-                           <li><a href="#managers">Gestores</a></li>
+                           <li class="managers-menu"><a href="#managers">Gestores</a></li>
                         </ul>
                     </li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
                     <li class="about-menu"><a href="#about">About</a></li>
-                    <li class="add-menu"><a href="logout">Sair</a></li>
-                    <li class="about-menu"><a><label id="loggedBy"></label></a></li>
+                    <li><a href="logout">Sair</a></li>
+                    <li><a><label id="loggedBy"></label></a></li>
                 </ul>
         </div><!--/.nav-collapse -->
       </div>
