inclusao de cadastro de professores

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
 <script src="js/views/studentlist.js"></script>
 <script src="js/views/studentdetails.js"></script>
 <script src="js/views/teacherlist.js"></script>
+<script src="js/views/teacherdetails.js"></script>
 <script src="js/views/attendantlist.js"></script>
 <script src="js/views/managerlist.js"></script>
 <script src="js/views/patientlist.js"></script>
