incluindo cadastro de gestores

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
 <script src="js/views/teacherdetails.js"></script>
 <script src="js/views/attendantlist.js"></script>
 <script src="js/views/managerlist.js"></script>
+<script src="js/views/managerdetails.js"></script>
 <script src="js/views/patientlist.js"></script>
 <script src="js/views/about.js"></script>
 <script src="js/main.js"></script>
