--- a/public/tpl/ManagersView.html
+++ b/public/tpl/ManagersView.html
@@ -1,5 +1,4 @@
 ﻿<legend>Gestores</legend>
-
 <br/>
 
 <div class="row">
@@ -11,13 +10,15 @@
         <ul class="dropdown-menu pull-right">
           <li><a onclick="find('name');">Por Nome</a></li>
           <li><a onclick="find('cpf');">Por CPF</a></li>
-          <li><a onclick="find('registration');">Por Registro</a></li>
+          <li><a onclick="find('registration');">Por Matrícula</a></li>
           <li><a onclick="find('limpar');">Limpar Pesquisa</a></li>
         </ul>
       </div><!-- /btn-group -->
     </div><!-- /input-group -->
   </div><!-- /.col-lg-6 -->
+<button class="btn btn-primary btn-large addManager">Incluir Gestor</button>
 </div><!-- /.row -->
+
 
 <br/>
 
@@ -28,7 +29,7 @@
                 <tr>
                     <th>ID</th>
                     <th>Nome</th>
-                    <th>Registro</th>
+                    <th>Matricula</th>
                     <th>CPF</th>
                     <th>Data Inclusão</th>
                     <th>Ativo</th>
@@ -39,9 +40,65 @@
     </div>
 </div>
 
+<!-- Modal -->
+<form class="form-horizontal span12">
+
+    <div id="addAccount" class="modal container hide fade" tabindex="-1">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3>Gerar senha de acesso</h3>
+    <div id="addAccountAlert" class="alert alert-warning" style="text-align: center">
+            <b>Este usuário já possui senha de acesso</b>
+        </div>
+  </div>
+  <fieldset>
+  <div class="modal-body">
+    <section style="float: left; width: 48%">
+                    <div class="control-group">
+                        <label for="name" class="control-label">Email:</label>
+
+                        <div class="controls">
+                            <input type="text" class="form-control" id="username" name="username" readonly style="float: left"/>
+                            <span class="help-inline"></span>
+                        </div>
+                    </div>
+                    <section>
+                    <article style="float: left; width: 48%; padding: 5px 0px;">
+                    <div class="control-group">
+                        <label for="grapes" class="control-label">Senha:</label>
+
+                        <div class="controls">
+                            <input type="password" class="form-control" id="password" name="password" placeholder="Senha" maxlength="20" required autofocus/>
+                            <span class="help-inline"></span>
+                        </div>
+                    </div>
+                    </article>
+                    <article style="float: right; width: 48%; padding: 5px 0px;">
+                    <div class="control-group">
+                        <label for="grapes" class="control-label">Confirma Senha:</label>
+
+                        <div class="controls">
+                            <input type="password" class="form-control" id="passwordconfirm" name="passwordconfirm" placeholder="Senha" maxlength="20"/>
+                            <span class="help-inline"></span>
+                        </div>
+                    </div>
+                    </article>
+                    </section>
+    </section>
+  </div>
+  </fieldset>
+  <br/>
+  <div class="modal-footer">
+    <button type="button" data-dismiss="modal" class="btn">Cancelar</button>
+    <button type="button" class="btn btn-primary btn-large save" onclick="addAccess();">Gerar Senha de Acesso</button>
+  </div>
+  <br/>
+</div>
+</form>
+
 <script>
     function find(por) {
-        
+
         var pesquisa = $('#txtPesquisa').val();
 
 
@@ -53,4 +110,67 @@
 
         window.location = '#managers/' + por + '/' + $('#txtPesquisa').val();
     }
+
+    $(document).on("click", ".addManager", function () {
+        window.location = '#managers/add';
+    });
+
+    $(document).on("click", ".openAddAccount", function () {
+        var username = $(this).data('id');
+        $(".modal-body #password").val('');
+        $(".modal-body #passwordconfirm").val('');
+
+        $("#addAccountAlert").hide();
+        $(".modal-body #username").val(username);
+
+        $.getJSON('/account/' + username, function (data) {
+            if (data) {
+                utils.showAlert('Este usuário já possui senha de acesso', '', 'alert-warning');
+                $("#addAccountAlert").show();
+                $(".modal-body #password").focus();
+            }
+        });
+    });
+
+
+    // Account
+    function AccountData(fusername, fpassword) {
+        this.username = fusername;
+        this.password = fpassword;
+        this.type = 'GESTOR';
+        this.toJsonString = function () { return JSON.stringify(this); };
+
+    };
+
+    function passwordValid() {
+        var pass = $(".modal-body #password").val();
+        var passConfirm = $(".modal-body #passwordconfirm").val();
+
+        return (pass != '' && passConfirm != '' && pass == passConfirm);
+    }
+
+    function addAccess() {
+        var username = $(".modal-body #username").val();
+
+        if (!passwordValid())
+            return;
+
+        var accountData = new AccountData($(".modal-body #username").val(), $(".modal-body #password").val());
+
+        jQuery.ajax({
+            type: "PUT",
+            url: '/account/' + username,
+            contentType: "application/json; charset=utf-8",
+            data: accountData.toJsonString(),
+            dataType: "json",
+            success: function (status) {
+                utils.showAlert('Success!', 'Senha gerada com sucesso', 'alert-success');
+            },
+
+            error: function (error) {
+                utils.showAlert('Erro', $.parseJSON(error.responseText).error, 'alert-error');
+            }
+        });
+    };
+
 </script>
