cadastro de atendentes

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
 <script src="js/views/teacherlist.js"></script>
 <script src="js/views/teacherdetails.js"></script>
 <script src="js/views/attendantlist.js"></script>
+<script src="js/views/attendantdetails.js"></script>
 <script src="js/views/managerlist.js"></script>
 <script src="js/views/managerdetails.js"></script>
 <script src="js/views/patientlist.js"></script>
