criando tela de inclusao de paciente

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
 <script src="js/views/managerlist.js"></script>
 <script src="js/views/managerdetails.js"></script>
 <script src="js/views/patientlist.js"></script>
+<script src="js/views/patientdetails.js"></script>
 <script src="js/views/about.js"></script>
 <script src="js/main.js"></script>
 
