--- a/public/tpl/PatientView.html
+++ b/public/tpl/PatientView.html
@@ -228,7 +228,7 @@
     <div id="delPatient" class="modal container hide fade" tabindex="-1" style="width: 500px; margin-left: -250px;">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3>Excluir Patient ?</h3>
+    <h3>Excluir Paciente ?</h3>
   </div>
   <div class="modal-footer">
     <button type="button" data-dismiss="modal" class="btn">Cancelar</button>
