--- a/public/tpl/PatientView.html
+++ b/public/tpl/PatientView.html
@@ -112,7 +112,7 @@
                         <label for="grapes" class="control-label">Data de Nascimento:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateBirth" name="dateBirth" value="<%= dateBirth === null ? '' : new Date(dateBirth).toLocaleDateString() %>" />
+                            <input type="text" class="form-control" id="dateBirth" name="dateBirth" value="<%= dateBirth === null ? '' : new Date(dateBirth).toLocaleDateString() %>" data-date-format="dd/mm/yyyy" />
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -253,5 +253,4 @@
     {
         history.back(1);
     }
-
 	</script>
