voltando teste de logon

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+x<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Clinica USCS</title>
@@ -71,7 +71,6 @@
 <script src="js/main.js"></script>
 
 <script type="text/javascript">
-    
     var _estadoscidades = '';
     $.getJSON('estados_cidades.json', function (data) {
         _estadoscidades = data;
