--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,7 @@
 <script src="js/views/managerdetails.js"></script>
 <script src="js/views/patientlist.js"></script>
 <script src="js/views/patientdetails.js"></script>
+<script src="js/views/treatmentlist.js"></script>
 <script src="js/views/about.js"></script>
 <script src="js/main.js"></script>
 
