--- a/public/tpl/TreatmentsView.html
+++ b/public/tpl/TreatmentsView.html
@@ -55,6 +55,6 @@
     }
 
     $(document).on("click", ".addTratment", function () {
-        window.location = '#tratments/add';
+        alert(window.location);
     });
 </script>
