preparando tela de cadastro de tratamento

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,7 @@
 <script src="js/views/patientlist.js"></script>
 <script src="js/views/patientdetails.js"></script>
 <script src="js/views/treatmentlist.js"></script>
+<script src="js/views/treatmentdetails.js"></script>
 <script src="js/views/about.js"></script>
 <script src="js/main.js"></script>
 
