--- a/public/tpl/TreatmentsView.html
+++ b/public/tpl/TreatmentsView.html
@@ -3,20 +3,7 @@
 <br/>
 
 <div class="row">
-  <div class="col-lg-5">
-    <div class="input-group">
-      <input type="text" id="txtPesquisa" class="form-control" maxlength="100">
-      <div class="input-group-btn">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Por Nome <span class="caret"></span></button>
-        <ul class="dropdown-menu pull-right">
-          <li><a onclick="find('name');">Por Nome</a></li>
-          <li><a onclick="find('cpf');">Por CPF</a></li>
-          <li><a onclick="find('limpar');">Limpar Pesquisa</a></li>
-        </ul>
-      </div><!-- /btn-group -->
-    </div><!-- /input-group -->
-  </div><!-- /.col-lg-6 -->
-<button class="btn btn-primary btn-large addTreatment">Incluir Tratamento</button>
+<button class="btn btn-primary btn-large" onclick="addTreatment();">Incluir Tratamento</button>
 </div><!-- /.row -->
 
 <br/>
@@ -38,22 +25,8 @@
     </div>
 </div>
 
-<script>
-    function find(por) {
-        
-        var pesquisa = $('#txtPesquisa').val();
-
-
-        if (por == 'limpar')
-            window.location = '#treatments';
-
-        if (pesquisa.length == 0)
-            return;
-
-        window.location = '#treatments/' + por + '/' + $('#txtPesquisa').val();
+<script type="text/javascript">
+    function addTreatment() {
+        window.location.assign(window.location.href + "/add"); 
     }
-
-    $(document).on("click", ".addTreatment", function () {
-        alert(window.location);
-    });
 </script>
