--- a/public/tpl/TreatmentView.html
+++ b/public/tpl/TreatmentView.html
@@ -1,7 +1,6 @@
 ﻿<div class="row-fluid">
 
     <form class="form-horizontal span12">
-        <input type="hidden" id="idPatient" name="idPatient" value="<%= idPatient %>" />
         <fieldset>
 
             <legend>Tratamento do Paciente </legend>
@@ -86,10 +85,10 @@
 
                         <div class="controls">
                             <select class="form-control" id="status" name="status">
-                                <option <%= serviceArea === 'AGUARDANDO TRIAGEM' ? 'selected' : '' %>>AGUARDANDO TRIAGEM</option>
-                                <option <%= serviceArea === 'TRIADO' ? 'selected' : '' %>>TRIADO</option>
-                                <option <%= serviceArea === 'EM ATENDIMENTO' ? 'selected' : '' %>>EM ATENDIMENTO</option>
-                                <option <%= serviceArea === 'FINALIZADO' ? 'selected' : '' %>>FINALIZADO</option>
+                                <option <%= status === 'AGUARDANDO TRIAGEM' ? 'selected' : '' %>>AGUARDANDO TRIAGEM</option>
+                                <option <%= status === 'TRIADO' ? 'selected' : '' %>>TRIADO</option>
+                                <option <%= status === 'EM ATENDIMENTO' ? 'selected' : '' %>>EM ATENDIMENTO</option>
+                                <option <%= status === 'FINALIZADO' ? 'selected' : '' %>>FINALIZADO</option>
                             </select>
                             <span class="help-inline"></span>
                         </div>
