--- a/public/tpl/AboutView.html
+++ b/public/tpl/AboutView.html
@@ -1,4 +1,4 @@
-<div class="row-fluid">
+﻿<div class="row-fluid">
     <div class="span12">
         <img class="about-icon" src="img/download.png" width="50">
         <h4>Download the source code</h4>
