--- a/public/tpl/TreatmentView.html
+++ b/public/tpl/TreatmentView.html
@@ -99,7 +99,7 @@
                         <label for="name" class="control-label">Observações:</label>
 
                         <div class="controls">
-                            <textarea class="form-control" id="observations" name="observations" maxlength="3000" style="height: 95px"><%= observations === null ? '' : observations %></textarea>
+                            <textarea class="form-control" id="observations" name="observations" maxlength="3000"><%= observations === null ? '' : observations %></textarea>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                         <label for="grapes" class="control-label">Data Inclusão:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateInclusion" name="dateInclusion" value="<%= dateInclusion == null ? '' : new Date(dateInclusion).toLocaleDateString() %>" readonly/>
+                            <input type="text" class="form-control" id="dateInclusion" name="dateInclusion" readonly/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                         <label for="grapes" class="control-label">Data Alteração:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateUpdate" name="dateUpdate" value="<%= dateUpdate === null ? '' : new Date(dateUpdate).toLocaleDateString() %>" readonly/>
+                            <input type="text" class="form-control" id="dateUpdate" name="dateUpdate" readonly/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
