--- a/public/tpl/TreatmentView.html
+++ b/public/tpl/TreatmentView.html
@@ -64,7 +64,7 @@
                         <label for="grapes" class="control-label">Nome do Médico:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="doctor" name="doctor" maxlength="100"/>
+                            <input type="text" class="form-control" id="doctor" name="doctor" value="<%= doctor === null ? '' : doctor %>" maxlength="100"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                         <label for="grapes" class="control-label">CRM do Médico:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="CRMDoctor" name="CRMDoctor"/>
+                            <input type="text" class="form-control" id="CRMDoctor" name="CRMDoctor" value="<%= CRMDoctor === null ? '' : CRMDoctor %>"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                         <label for="grapes" class="control-label">Data Inclusão:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateInclusion" name="dateInclusion" readonly/>
+                            <input type="text" class="form-control" id="dateInclusion" name="dateInclusion" value="<%= dateInclusion == null ? '' : new Date(dateInclusion).toLocaleDateString() %>" readonly/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                         <label for="grapes" class="control-label">Data Alteração:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateUpdate" name="dateUpdate" readonly/>
+                            <input type="text" class="form-control" id="dateUpdate" name="dateUpdate" value="<%= dateUpdate === null ? '' : new Date(dateUpdate).toLocaleDateString() %>" readonly/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
