--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
 <script src="js/views/patientdetails.js"></script>
 <script src="js/views/treatmentlist.js"></script>
 <script src="js/views/treatmentdetails.js"></script>
+<script src="js/views/sessionlist.js"></script>
 <script src="js/views/about.js"></script>
 <script src="js/main.js"></script>
 
