criando tela de cadastro de sessao

--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
 <script src="js/views/treatmentlist.js"></script>
 <script src="js/views/treatmentdetails.js"></script>
 <script src="js/views/sessionlist.js"></script>
+<script src="js/views/sessiondetails.js"></script>
 <script src="js/views/about.js"></script>
 <script src="js/main.js"></script>
 
